# tiny-pointers

./: CMakeLists.txt  Dockerfile  README.md  _clang-format  conanfile.py  cor.yml
src/: CMakeLists.txt
src/tiny_pointers/: bit_ops.hpp  bit_vec.hpp  bit_vec.test.cpp  data.hpp  data.test.cpp  imports.hpp  tiny_pointers.cpp  tiny_pointers.hpp  tiny_pointers.test.cpp  util.hpp  util.test.cpp
test_package/: CMakeLists.txt  conanfile.py
test_package/src/: example.cpp
